# reddit-insight

./: .gitattributes  .gitignore  LICENSE  README.md
.cursor/rules/: batch-fix-after-build-errors.mdc
data-service/: .env.example  pyproject.toml  reddit_insight.db
data-service/app/: config.py  database.py  main.py
data-service/app/api/: __init__.py  analysis.py  opportunities.py  posts.py  reports.py  stats.py  subreddits.py  tasks.py
data-service/app/models/: __init__.py  collect_task.py  comment.py  opportunity.py  post.py  post_analysis.py  subreddit.py
data-service/app/prompts/: __init__.py  analysis.py  system.py
data-service/app/services/: analyzer.py  collector.py  comment_fetcher.py  comment_sampler.py  opportunity_engine.py  scheduler.py  token_budget.py
data-service/scripts/: _debug_opportunities.py  comment_actor_config.json  debug_comments.py  e2e_test.py  get_actor_schema.py  get_schema2.py  migrate_db.py  migrate_insight.py  reset_comments.py  test_new_actor.py  test_new_actor2.py  test_proxy_api.py
data-service/tests/: conftest.py  test_api_posts.py  test_api_stats.py  test_api_subreddits.py  test_api_tasks.py  test_collector_unit.py  test_health.py
frontend/: .env.local.example  .gitignore  next-sitemap.config.js  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/[locale]/: layout.tsx  (+1 more)
frontend/i18n/: request.ts  routing.ts
frontend/messages/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt-BR.json  zh-Hans.json  zh-Hant.json
frontend/public/: sitemap-0.xml
(+13 files in other folders)
